packages/@lwc/template-compiler/src/__tests__/fixtures/parsing-errors/invalid-template-attribute/single-attribute/expected.js
import { registerTemplate } from "lwc";
const stc0 = [];
function tmpl($api, $cmp, $slotset, $ctx) {
  const {} = $api;
  return [stc0];
}
export default registerTemplate(tmpl);
tmpl.stylesheets = [];
